--- a/src/_designkit-sets.scss
+++ b/src/_designkit-sets.scss
@@ -1,3 +1,19 @@
-body {
-  background: #fff;
+.label-set {
+  position: relative;
+  padding: 5px 30px 6px 8px;
+  font-family: $helvetica;
+  font-size: 12px;
+  color: #fff;
+  background: #8495a4;
+  border-radius: 2px;
+  .label-set-count {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: auto;
+    height: 100%;
+    padding: 5px 8px 6px 8px;
+    background-color: rgba(black, .16);
+  }
 }
