--- a/css/designkit-sets.css
+++ b/css/designkit-sets.css
@@ -3,23 +3,38 @@
 // designkit-sets
 // --------------------------------------------------
 */
-.label-set {
-  position: relative;
-  padding: 5px 30px 6px 8px;
+.set {
+  display: inline-block;
+  margin-right: 6px;
   font-family: "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif;
   font-size: 12px;
   color: #fff;
-  background: #8495a4;
+  text-decoration: none;
+  background: #76899A;
   border-radius: 2px;
+  outline: none;
 }
 
-.label-set .label-set-count {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: auto;
-  height: 100%;
-  padding: 5px 8px 6px 8px;
-  background-color: rgba(0, 0, 0, 0.16);
+.set .set-label,
+.set .set-count {
+  padding: 3px 8px 3px 8px;
+}
+
+.set .set-label {
+  float: left;
+  border-radius: 2px 0 0 2px;
+}
+
+.set .set-count {
+  float: right;
+  background-color: rgba(0, 0, 0, 0.25);
+  border-radius: 0 2px 2px 0;
+}
+
+.set:hover {
+  background-color: #0A83F6;
+}
+
+.set.is-selected, .set.is-selected:hover {
+  background-color: #80C11A;
 }
