Changed is-selected to active

--- a/css/designkit-sets.css
+++ b/css/designkit-sets.css
@@ -35,6 +35,6 @@
   background-color: #0A83F6;
 }
 
-.set.is-selected, .set.is-selected:hover {
+.set.active, .set.active:hover {
   background-color: #80C11A;
 }
