--- a/src/_designkit-sets.scss
+++ b/src/_designkit-sets.scss
@@ -28,8 +28,8 @@
     background-color: $blue;
   }
 
-  &.is-selected,
-  &.is-selected:hover {
+  &.active,
+  &.active:hover {
     background-color: $green;
   }
 }
