--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,13 +1,9 @@
-@charset "UTF-8";
-
-/*
 //
-// designkit-sets
+// Designkit Sets
 // --------------------------------------------------
-*/
 
 @import
   "bourbon",
   "designkit-colors",
-  "src/designkit-sets"
+  "designkit-sets"
 ;
